--- a/就业课程/大事件/day01/1 copy 12.html
+++ b/就业课程/大事件/day01/1 copy 12.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>预加载等待</title>
 
 </head>
 
@@ -14,6 +14,8 @@
 </style>
 
 <body>
+
+    <video src="../video.mp4" preload="auto" poster="../4.jpg" autoplay controls width="300px" height="200px"></video>
 
     <script>
 
